fix(style): fix broken background color on mobile devices

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -3,12 +3,11 @@
 
 html {
   width: 100%;
+  height: 100%;
 }
 
 body {
-  background: linear-gradient(white, $beer-yellow);
-  background-attachment: fixed;
-  background-repeat: no-repeat;
+  background: $beer-yellow;
   color: black;
   margin: 0;
   padding: 0;
@@ -16,6 +15,10 @@ body {
   font-size: 14px;
   overflow-y: scroll;
   height: 100%;
+
+  @media (min-width: 768px) {
+    background: linear-gradient(white, $beer-yellow) fixed;
+  }
 }
 
 *,
@@ -36,7 +39,7 @@ section {
 
 h1 {
   font-size: 22px;
-  
+
   @media (min-width: 768px) {
     font-size: 28px;
   }
